# cyders

./: .gitignore  BUILD_DEMO_AUTOMATICALLY.md  Cargo.toml  IMPLEMENTATION_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  LICENSE-APACHE  LICENSE-MIT  PHASE10B_COMPLETE.md  PHASE10B_QUICK_REFERENCE.md  PHASE10C_COMPLETE.md  PHASE10C_QUICK_REFERENCE.md  PHASE10_COMPLETE.md  PHASE8_COMPLETE.md  README.md  boards.json  build.rs  index.html  run-cyders.bat  wrapper.h
.github/workflows/: build.yml
src/: app.rs  board.rs  crash_handler_wrapper.c  display.rs  emu_stubs.c  emulator.rs  flexe_bindings.rs  flexe_ffi.rs  input.rs  main.rs
src/peripherals/: mod.rs  nvs.rs  sdcard.rs  uart.rs
src/ui/: info_panel.rs  left_panel.rs  mod.rs
